WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146251
Media controls are missing the white backdrop in UIWebViews
https://bugs.webkit.org/show_bug.cgi?id=146251
Summary
Media controls are missing the white backdrop in UIWebViews
Dean Jackson
Reported
2015-06-23 15:09:57 PDT
Media controls are missing the white backdrop in UIWebViews
Attachments
Patch
(13.08 KB, patch)
2015-06-23 15:14 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Patch
(12.93 KB, patch)
2015-06-23 15:31 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2015-06-23 15:13:29 PDT
<
rdar://problem/20181345
>
Dean Jackson
Comment 2
2015-06-23 15:14:28 PDT
Created
attachment 255439
[details]
Patch
Simon Fraser (smfr)
Comment 3
2015-06-23 15:27:09 PDT
Comment on
attachment 255439
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=255439&action=review
> Source/WebCore/platform/graphics/ca/cocoa/WebSystemBackdropLayer.mm:65 > +- (void)setBackgroundColor:(CGColorRef)backgroundColor > +{ > + UNUSED_PARAM(backgroundColor); > + static CGColorRef layerBackgroundColor; > + if (!layerBackgroundColor) { > + CGFloat components[4] = { 0.8, 0.8, 0.8, 0.8 }; > + layerBackgroundColor = CGColorCreate(cachedCGColorSpace(ColorSpaceSRGB), components); > + [super setBackgroundColor:layerBackgroundColor]; > + } > +}
Seems odd to override -setBackgroundColor: and replace the color. Why not just set the background color in -init, and make sure no clients push a background color?
Dean Jackson
Comment 4
2015-06-23 15:31:54 PDT
Created
attachment 255440
[details]
Patch
Dean Jackson
Comment 5
2015-06-23 15:48:32 PDT
Committed
r185888
: <
http://trac.webkit.org/changeset/185888
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug