Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm
@@ -43,6 +43,7 @@
 #import "WebCoreCALayerExtras.h"
 #import "WebGLLayer.h"
 #import "WebLayer.h"
+#import "WebSystemBackdropLayer.h"
 #import "WebTiledBackingLayer.h"
 #import <AVFoundation/AVFoundation.h>
 #import <QuartzCore/QuartzCore.h>
@@ -225,16 +226,24 @@ PlatformCALayerCocoa::PlatformCALayerCocoa(LayerType layerType, PlatformCALayerC
     case LayerTypeTransformLayer:
         layerClass = [CATransformLayer class];
         break;
+#if ENABLE(FILTERS_LEVEL_2)
+    case LayerTypeBackdropLayer:
+        layerClass = [CABackdropLayer class];
+        break;
+    case LayerTypeLightSystemBackdropLayer:
+        layerClass = [WebLightSystemBackdropLayer class];
+        break;
+    case LayerTypeDarkSystemBackdropLayer:
+        layerClass = [WebDarkSystemBackdropLayer class];
+        break;
+#else
     case LayerTypeBackdropLayer:
     case LayerTypeLightSystemBackdropLayer:
     case LayerTypeDarkSystemBackdropLayer:
-#if ENABLE(FILTERS_LEVEL_2)
-        layerClass = [CABackdropLayer class];
-#else
         ASSERT_NOT_REACHED();
         layerClass = [CALayer class];
-#endif
         break;
+#endif
     case LayerTypeWebTiledLayer:
         ASSERT_NOT_REACHED();
         break;
